--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <section class="header">
         <nav>
-            <a href="index.html"><img src="/Images/logo.png" alt="Education Hub"></a>
+            <a href="index.html"><img src="logo.png" alt="Education Hub"></a>
             <div class="nav-links" id="navLinks">
                 <i class="fas fa-times-circle" onclick="closeMenu()"></i>
                 <ul>
